chore: Box Is a Unique Type

--- a/src/reading-list/2024a.md
+++ b/src/reading-list/2024a.md
@@ -48,13 +48,13 @@
 * [Benchmarking rust compilation speedups and slowdowns from sccache and -Zthreads](https://neosmart.net/blog/benchmarking-rust-compilation-speedups-and-slowdowns-from-sccache-and-zthreads/)：
   由于 WSL1 的 IO 性能较差，在那使用 sccache 可能并不会加速增量构建，反而会拖慢编译
 
-# unsafe
+# Box Is a Unique Type
 
-* [Box Is a Unique Type](https://nilstrieb.dev/blog/posts/box-is-a-unique-type/) by nilstrieb
-  * 用 Miri 分析/解释 UB 的示例；Box 在 noalias 语义上具有分歧 —— UB 与 Rust 语义紧密联系
-  * [Too Many Linked Lists: Attempting To Understand Stacked Borrows](https://rust-unofficial.github.io/too-many-lists/fifth-stacked-borrows.html)
-  * [UCG#326: What are the uniqueness guarantees of Box and Vec?](https://github.com/rust-lang/unsafe-code-guidelines/issues/326)
-  * [The Unsafe Chronicles: Exhibit A: Aliasing Boxes](https://www.youtube.com/watch?v=EY7Wi9fV5bk&ab_channel=JonGjengset) by Jonhoo
+[Box Is a Unique Type](https://nilstrieb.dev/blog/posts/box-is-a-unique-type/) by nilstrieb
+* 用 Miri 分析/解释 UB 的示例；Box 在 noalias 语义上具有分歧 —— UB 与 Rust 语义紧密联系
+* [Too Many Linked Lists: Attempting To Understand Stacked Borrows](https://rust-unofficial.github.io/too-many-lists/fifth-stacked-borrows.html)
+* [UCG#326: What are the uniqueness guarantees of Box and Vec?](https://github.com/rust-lang/unsafe-code-guidelines/issues/326)
+* [The Unsafe Chronicles: Exhibit A: Aliasing Boxes](https://www.youtube.com/watch?v=EY7Wi9fV5bk&ab_channel=JonGjengset) by Jonhoo
 
 ```rust
 use aliasable::boxed::AliasableBox;
