Reading List: add pointer provenance

--- a/src/reading-list/2024a.md
+++ b/src/reading-list/2024a.md
@@ -129,3 +129,11 @@ note: inside `main`
 
 * <https://edgl.dev/blog/rust-fn-size-trick/>：将主体代码放入单态化函数，来减少 Rust 泛型函数生成的汇编代码
   * <https://docs.rs/momo>：利用宏自动生成这种模式
+
+
+* pointer provenance
+  * Unsafe Code Guidelines Reference: [pointer provenance](https://rust-lang.github.io/unsafe-code-guidelines/glossary.html#pointer-provenance) 
+  * RustLang: [Tracking Issue for strict_provenance](https://github.com/rust-lang/rust/issues/95228)
+  * RalfJung: [Pointers Are Complicated, or: What's in a Byte?](https://www.ralfj.de/blog/2018/07/24/pointers-and-bytes.html)
+  * RalfJung: [Pointers Are Complicated II, or: We need better language specs](https://www.ralfj.de/blog/2020/12/14/provenance.html)
+  * RalfJung: [Pointers Are Complicated III, or: Pointer-integer casts exposed](https://www.ralfj.de/blog/2022/04/11/provenance-exposed.html)
