update: reading-list 2025a

--- a/src/reading-list/2025a.md
+++ b/src/reading-list/2025a.md
@@ -1,5 +1,33 @@
 # 2025 清单
 
+## Rust 语言
+
 * [Bridging Async and Sync Rust Code — A lesson learned while working with Tokio](https://www.reddit.com/r/rust/comments/1hqfjb1/bridging_async_and_sync_rust_code_a_lesson/)：
   异步代码与同步调用；futures::executor::block_on 与 tokio::spawn 的死锁
 * [Rust, reflection and field access rules](https://fractalfir.github.io/generated_html/refl_priv.html)：反射与字段访问的安全性；反射的不安全性
+* [Type Inference in Rust and C++](https://herecomesthemoon.net/2025/01/type-inference-in-rust-and-cpp/)：
+  C++ 与 Rust 类型推断对比
+* [Refined: simple refinement types for Rust](https://jordankaye.dev/posts/refined/)：
+  将类型的值缩小到一个子集，并且可以与 serde 集成
+
+## low-level
+
+* [Testing Assembly Code with Rust](https://kellnr.io/blog/rust-assembly)：汇编与 Rust 测试
+* [No-Panic Rust: A Nice Technique for Systems Programming](https://blog.reverberate.org/2025/02/03/no-panic-rust.html)：
+  查看和去除 panic 代码的技巧，以减少二进制产物大小
+* [So you want better debug info?](https://walnut356.github.io/posts/so-you-want-better-debug-info/)：Rust 调试信息
+
+## 嵌入式
+
+* Insights for Everyone and Nine Rules for Embedded Programmers
+  * [How Rust & Embassy Shine on Embedded Devices (Part 1)](https://medium.com/@carlmkadie/how-rust-embassy-shine-on-embedded-devices-part-1-9f4911c92007)
+  * [How Rust & Embassy Shine on Embedded Devices (Part 2)](https://medium.com/@carlmkadie/how-rust-embassy-shine-on-embedded-devices-part-2-aad1adfccf72)
+
+## 其他
+
+1. [Smuggling arbitrary data through an emoji](https://paulbutler.org/2025/smuggling-arbitrary-data-through-an-emoji/)：
+  使用 unicode 的 ZWJ (Zero Width Joiner) 特性，隐藏任意字符
+2. [Tokio + prctl = nasty bug](https://kobzol.github.io/rust/2025/02/23/tokio-plus-prctl-equals-nasty-bug.html)：
+  作者误读了 PR_SET_PDEATHSIG 的文档，在 spawn 子进程的时候，通过 prctl 把
+  SIGTERM 信号设置给了 spawn_blocking 的 tokio 线程，但以为设置给了子进程的故事。  
+  拓展阅读：关于 prctl API 的演讲 [Once upon an API](https://michaelkerrisk.com/conf/osseu2019/once-upon-an-API--OSS.eu-2019--Kerrisk.pdf)
