add link: Zig -> allocators -> Rust ergonomics

--- a/src/reading-list/2025a.md
+++ b/src/reading-list/2025a.md
@@ -16,6 +16,8 @@
 * [No-Panic Rust: A Nice Technique for Systems Programming](https://blog.reverberate.org/2025/02/03/no-panic-rust.html)：
   查看和去除 panic 代码的技巧，以减少二进制产物大小
 * [So you want better debug info?](https://walnut356.github.io/posts/so-you-want-better-debug-info/)：Rust 调试信息
+* [Zig -> allocators -> Rust ergonomics](https://www.capturedlambda.dev/blog/zig-allocators-rust_ergo/)：
+  使用自定义分配器
 
 ## 嵌入式
 
